Remove negotiation creating workaround
