# swagger/swagger.json
@@ -34,18 +34,6 @@
                 "service_cost": {
                   "type": "string"
                 },
-                "country": {
-                  "type": "string"
-                },
-                "city": {
-                  "type": "string"
-                },
-                "state": {
-                  "type": "string"
-                },
-                "street": {
-                  "type": "string"
-                },
                 "type": {
                   "type": "string"
                 },
@@ -246,7 +234,7 @@
           "401": {
             "description": "Unauthorized"
           },
-          "500": {
+          "422": {
             "description": "Wrong parameters"
           }
         }
@@ -287,7 +275,7 @@
           "401": {
             "description": "Unauthorized"
           },
-          "500": {
+          "422": {
             "description": "Wrong parameters"
           }
         }
@@ -374,10 +362,10 @@
                   "last_name"
                 ],
                 "example": {
-                  "email": "henry.grant@swift.name",
-                  "first_name": "Melia",
-                  "last_name": "Oberbrunner",
-                  "password": "ISq1GDWJWnQQ3j"
+                  "email": "gayle_hoppe@lednermurray.name",
+                  "first_name": "Santa",
+                  "last_name": "Goldner",
+                  "password": "UpPxZnd3XRzuUEL"
                 }
               }
             }
@@ -395,7 +383,42 @@
             "description": "Invalid data",
             "schema": {
               "type": "object",
-              "$ref": "#/definitions/errors"
+              "$ref": "#/definitions/error"
+            }
+          }
+        }
+      },
+      "get": {
+        "summary": "Fetch users",
+        "consumes": [
+          "application/json"
+        ],
+        "tags": [
+          "Users"
+        ],
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "get users",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/user"
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "schema": {
+              "type": "object",
+              "$ref": "#/definitions/error"
             }
           }
         }
@@ -426,8 +449,8 @@
                 }
               },
               "example": {
-                "first_name": "Abel",
-                "last_name": "King"
+                "first_name": "Zackary",
+                "last_name": "Morissette"
               }
             }
           },
@@ -446,17 +469,70 @@
         ],
         "responses": {
           "200": {
-            "description": "user updated",
+            "description": "User is updated",
             "schema": {
               "type": "object",
               "$ref": "#/definitions/user"
             }
           },
-          "422": {
-            "description": "invalid data",
+          "401": {
+            "description": "Unauthorized",
             "schema": {
               "type": "object",
-              "$ref": "#/definitions/errors"
+              "$ref": "#/definitions/error"
+            }
+          },
+          "422": {
+            "description": "Invalid data",
+            "schema": {
+              "type": "object",
+              "$ref": "#/definitions/error"
+            }
+          }
+        }
+      },
+      "get": {
+        "summary": "Fetch user",
+        "consumes": [
+          "application/json"
+        ],
+        "tags": [
+          "Users"
+        ],
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Get user by id",
+            "schema": {
+              "type": "object",
+              "$ref": "#/definitions/user"
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "schema": {
+              "type": "object",
+              "$ref": "#/definitions/error"
+            }
+          },
+          "404": {
+            "description": "Wrong id",
+            "schema": {
+              "type": "object",
+              "$ref": "#/definitions/error"
             }
           }
         }
@@ -464,6 +540,21 @@
     }
   },
   "definitions": {
+    "error": {
+      "type": "object",
+      "properties": {
+        "message": {
+          "type": "string"
+        },
+        "code": {
+          "type": "string"
+        }
+      },
+      "required": [
+        "message",
+        "code"
+      ]
+    },
     "negotiation": {
       "type": "object",
       "properties": {
@@ -480,7 +571,7 @@
         "service_cost": {
           "type": "string"
         },
-        "type": {
+        "type ": {
           "type": "string"
         },
         "address_from": {
